update13 responsive5 mobile blocs done

--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
                                         <img class="img_article" src="images/hebergements/4_small/h.jpg" alt="port">       
                                 </figure>
                                 <div class="paragraphe">
-                                <h3 class="title">Auberge La Cannebière</h3>
-                                    <p class="price">Nuit à partir de 25€</p>
-                                    <div class="rating1">
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <div class="rating2">
-                                        <i class="fa-solid fa-star"></i>
-                                    </div>
+                                    <h3 class="title">Auberge La Cannebière</h3>
+                                        <p class="price">Nuit à partir de 25€</p>
+                                        <div class="rating1">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <div class="rating2"></div>
+                                            <i class="fa-solid fa-star"></i>
+                                        </div>
                                 </div>
                             </a>
                         </article>              
@@ -119,7 +119,7 @@
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
-                                        <div class="rating2">
+                                        <div class="rating2"></div>
                                         <i class="fa-solid fa-star"></i>
                                     </div>
                                 </div>
@@ -137,7 +137,7 @@
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
-                                        <div class="rating2">
+                                        <div class="rating2"></div>
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
                                     </div>                 
@@ -157,7 +157,7 @@
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
-                                        <div class="rating2">
+                                        <div class="rating2"></div>
                                         <i class="fa-solid fa-star"></i>
                                     </div>                    
                                 </div>
@@ -222,7 +222,7 @@
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
                                     <div class="rating2">
-                                        <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
                                     </div>
                                 </div>                    
                             </div>
@@ -241,10 +241,10 @@
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
-                                <div class="rating2">
+                                    <div class="rating2">
                                     <i class="fa-solid fa-star"></i>
+                                    </div>                    
                                 </div>
-                                </div>                    
                             </div>
                         </a>
                     </article>
