update14 responsive6 desktop+mobile+tablet done

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
         <div class="infoicone">
             <i class="fa-solid fa-circle-info"></i>
-            <p>Plus de 500 logements sont disponible dans cette ville</p>
+            <p>Plus de 500 logements sont disponibles dans cette ville</p>
         </div>
 
 
@@ -72,113 +72,127 @@
                         <article class="article1">
                             <a class="texte" href="#" >
                                 <figure>
-                                        <img class="img_article" src="images/hebergements/4_small/h.jpg" alt="port">       
+                                        <img class="img_article" src="images/hebergements/4_small/h.jpg" alt="port">
+                                        <figcaption>
+                                            <div class="paragraphe">
+                                                <h3 class="title">Auberge La Cannebière</h3>
+                                                <p class="price">Nuit à partir de 25€</p>
+                                                <div class="rating1">
+                                                    <i class="fa-solid fa-star"></i>
+                                                    <i class="fa-solid fa-star"></i>
+                                                    <i class="fa-solid fa-star"></i>
+                                                    <i class="fa-solid fa-star"></i>
+                                                    <div class="rating2"></div>
+                                                    <i class="fa-solid fa-star"></i>
+                                                </div>
+                                            </div>
+                                        </figcaption>       
                                 </figure>
-                                <div class="paragraphe">
-                                    <h3 class="title">Auberge La Cannebière</h3>
-                                        <p class="price">Nuit à partir de 25€</p>
-                                        <div class="rating1">
-                                            <i class="fa-solid fa-star"></i>
-                                            <i class="fa-solid fa-star"></i>
-                                            <i class="fa-solid fa-star"></i>
-                                            <i class="fa-solid fa-star"></i>
-                                            <div class="rating2"></div>
-                                            <i class="fa-solid fa-star"></i>
-                                        </div>
-                                </div>
+
                             </a>
                         </article>              
                         <article class="article1">
                             <a class="texte" href="#" >
                                 <figure>
                                         <img class="img_article" src="images/hebergements/4_small/g.jpg" alt="port">
+                                        <figcaption>
+                                            <div class="paragraphe">
+                                                <h3 class="title">Hôtel du port</h3>
+                                                <p class="price">Nuit à partir de 52€</p>
+                                                <div class="rating1">
+                                                    <i class="fa-solid fa-star"></i>
+                                                    <i class="fa-solid fa-star"></i>
+                                                    <i class="fa-solid fa-star"></i>
+                                                    <i class="fa-solid fa-star"></i>
+                                                    <i class="fa-solid fa-star"></i>
+                                                </div>
+                                            </div>
+                                        </figcaption>
                                 </figure>
-                                <div class="paragraphe">
-                                <h3 class="title">Hôtel du port</h3>
-                                    <p class="price">Nuit à partir de 52€</p>
-                                    <div class="rating1">
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                    </div>
-                                </div>
                             </a>
                         </article>  
                         <article class="article1">
                             <a class="texte" href="#" >
                                 <figure>
                                         <img class="img_article" src="images/hebergements/4_small/j.jpg" alt="port">
+                                        <figcaption>
+                                            <div class="paragraphe">
+                                                <h3 class="title">Hôtel Les mouettes</h3>
+                                                <p class="price">Nuit à partir de 76€</p>
+                                                <div class="rating1">
+                                                    <i class="fa-solid fa-star"></i>
+                                                    <i class="fa-solid fa-star"></i>
+                                                    <i class="fa-solid fa-star"></i>
+                                                    <i class="fa-solid fa-star"></i>
+                                                    <div class="rating2"></div>
+                                                    <i class="fa-solid fa-star"></i>
+                                                </div>
+                                            </div>
+                                        </figcaption>
                                 </figure>
-                                <div class="paragraphe">
-                                <h3 class="title">Hôtel Les mouettes</h3>
-                                    <p class="price">Nuit à partir de 76€</p>
-                                    <div class="rating1">
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <div class="rating2"></div>
-                                        <i class="fa-solid fa-star"></i>
-                                    </div>
-                                </div>
+
                             </a>
                         </article>  
                         <article class="article1">
                             <a class="texte" href="#" >
                                 <figure>
                                         <img class="img_article" src="images/hebergements/4_small/a.jpg" alt="port">
+                                        <figcaption>
+                                            <div class="paragraphe">
+                                                <h3 class="title">Hôtel de la mer</h3>
+                                                <p class="price">Nuit à partir de 46€</p>
+                                                    <div class="rating1">
+                                                        <i class="fa-solid fa-star"></i>
+                                                        <i class="fa-solid fa-star"></i>
+                                                        <i class="fa-solid fa-star"></i>
+                                                        <div class="rating2"></div>
+                                                        <i class="fa-solid fa-star"></i>
+                                                        <i class="fa-solid fa-star"></i>
+                                                    </div>                 
+                                            </div>
+                                        </figcaption>
                                 </figure>
-                                <div class="paragraphe">
-                                <h3 class="title">Hôtel de la mer</h3>
-                                    <p class="price">Nuit à partir de 46€</p>
-                                    <div class="rating1">
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <div class="rating2"></div>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                    </div>                 
-                                </div>
                             </a>
                         </article>  
                         <article class="article1">
                             <a class="texte" href="#" >
                                 <figure>
                                         <img class="img_article" src="images/hebergements/4_small/i.jpg" alt="port">
+                                        <figcaption>
+                                            <div class="paragraphe">
+                                                <h3 class="title">Auberge Le Panier</h3>
+                                                <p class="price">Nuit à partir de 23€</p>
+                                                <div class="rating1">
+                                                    <i class="fa-solid fa-star"></i>
+                                                    <i class="fa-solid fa-star"></i>
+                                                    <i class="fa-solid fa-star"></i>
+                                                    <i class="fa-solid fa-star"></i>
+                                                    <div class="rating2"></div>
+                                                    <i class="fa-solid fa-star"></i>
+                                                </div>                    
+                                            </div>
+                                        </figcaption>
                                 </figure>
-                                <div class="paragraphe">
-                                <h3 class="title">Auberge Le Panier</h3>
-                                    <p class="price">Nuit à partir de 23€</p>
-                                    <div class="rating1">
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <div class="rating2"></div>
-                                        <i class="fa-solid fa-star"></i>
-                                    </div>                    
-                                </div>
                             </a>
                         </article>  
                         <article class="article1">
                             <a class="texte" href="#" >
                                 <figure>
-                                        <img class="img_article" src="images/hebergements/4_small/d.jpg" alt="port">   
+                                        <img class="img_article" src="images/hebergements/4_small/d.jpg" alt="port">
+                                        <figcaption>
+                                            <div class="paragraphe">
+                                                <h3 class="title">Hôtel chez Amina</h3>
+                                                <p class="price">Nuit à partir de 96€</p>
+                                                <div class="rating1">
+                                                    <i class="fa-solid fa-star"></i>
+                                                    <i class="fa-solid fa-star"></i>
+                                                    <i class="fa-solid fa-star"></i>
+                                                    <i class="fa-solid fa-star"></i>
+                                                    <i class="fa-solid fa-star"></i>
+                                                </div>                    
+                                            </div>
+                                        </figcaption>   
                                 </figure>
-                                <div class="paragraphe">
-                                <h3 class="title">Hôtel chez Amina</h3>
-                                    <p class="price">Nuit à partir de 96€</p>
-                                    <div class="rating1">
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                    </div>                    
-                                </div>
                             </a>
                         </article>  
                     </div>
