--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes ">
@@ -13,7 +13,6 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" rel="stylesheet">
 
 </head>
-
 <body>
     <header>
         <img class="logo1" src="images/logo/Booki@3x.png" alt="logo">
@@ -24,7 +23,6 @@
             </ul>
         </nav>
     </header>
-
     <main>
         <div class="firstparag">
                 <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
@@ -63,8 +61,6 @@
             <i class="fa-solid fa-circle-info"></i>
             <p>Plus de 500 logements sont disponibles dans cette ville</p>
         </div>
-
-
         <section class="containers">
                 <div class="flex_container">
                     <h2 id="Hébergements_à_Marseille">Hébergements à Marseille</h2>
@@ -88,7 +84,6 @@
                                             </div>
                                         </figcaption>       
                                 </figure>
-
                             </a>
                         </article>              
                         <article class="article1">
@@ -130,7 +125,6 @@
                                             </div>
                                         </figcaption>
                                 </figure>
-
                             </a>
                         </article>  
                         <article class="article1">
@@ -198,7 +192,6 @@
                     </div>
                         <a href="#" class="plus">Afficher plus</a>
                 </div>
-
                 <div class="flex_container2">
                     <div class="trend">
                         <h2 class="popu">Les plus populaires</h2>
@@ -324,7 +317,6 @@
                 <p>Nous contacter</p>
             </div>
     </footer>
-
 </body>
 </html>
 
