--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" rel="stylesheet">
 
-</head>
+</head> .     
 <body>
     <header>
         <img class="logo1" src="images/logo/Booki@3x.png" alt="logo">
@@ -78,8 +78,9 @@
                                                     <i class="fa-solid fa-star"></i>
                                                     <i class="fa-solid fa-star"></i>
                                                     <i class="fa-solid fa-star"></i>
-                                                    <div class="rating2"></div>
-                                                    <i class="fa-solid fa-star"></i>
+                                                    <div class="rating2">
+                                                        <i class="fa-solid fa-star"></i>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </figcaption>       
@@ -119,8 +120,9 @@
                                                     <i class="fa-solid fa-star"></i>
                                                     <i class="fa-solid fa-star"></i>
                                                     <i class="fa-solid fa-star"></i>
-                                                    <div class="rating2"></div>
-                                                    <i class="fa-solid fa-star"></i>
+                                                    <div class="rating2">
+                                                        <i class="fa-solid fa-star"></i>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </figcaption>
@@ -139,9 +141,10 @@
                                                         <i class="fa-solid fa-star"></i>
                                                         <i class="fa-solid fa-star"></i>
                                                         <i class="fa-solid fa-star"></i>
-                                                        <div class="rating2"></div>
-                                                        <i class="fa-solid fa-star"></i>
-                                                        <i class="fa-solid fa-star"></i>
+                                                        <div class="rating2">
+                                                            <i class="fa-solid fa-star"></i>
+                                                            <i class="fa-solid fa-star"></i>
+                                                        </div>
                                                     </div>                 
                                             </div>
                                         </figcaption>
@@ -161,8 +164,9 @@
                                                     <i class="fa-solid fa-star"></i>
                                                     <i class="fa-solid fa-star"></i>
                                                     <i class="fa-solid fa-star"></i>
-                                                    <div class="rating2"></div>
-                                                    <i class="fa-solid fa-star"></i>
+                                                    <div class="rating2">
+                                                        <i class="fa-solid fa-star"></i>
+                                                    </div>
                                                 </div>                    
                                             </div>
                                         </figcaption>
